--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="icon" href="ChatGPT Image May 10, 2025, 05_33_32 PM 2 (1).png" type="image/png">
     <title>Your Website Title</title>
 </head>
 <body>
